--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,12 @@
             "mode": "auto",
             "program": "${fileDirname}",
             "env": {},
-            "args": []
+            "args": [
+                "-p",
+                "\\\\DS115\\Movies",
+                "-e",
+                "Kids"
+            ]
         }
     ]
 }
