--- a/autotag.service
+++ b/autotag.service
@@ -6,9 +6,8 @@ Type=simple
 Restart=always
 RestartSec=5s
 User=root
-Environment=GIN_MODE=release
 WorkingDirectory=/opt/autotag
-ExecStart=/opt/autotag/autotag 
+ExecStart=/opt/autotag/autotag <PATH> <REGEX>
 
 [Install]
 WantedBy=multi-user.target
